Fix flicker when mousing over tooltip in TODDOW widget
See also: https://github.com/Caged/d3-tip/issues/50

--- a/web/app/styles/_helpers.scss
+++ b/web/app/styles/_helpers.scss
@@ -18,7 +18,7 @@
     color: white;
     margin-left: 0px;
     margin-top: 10px;
-    pointer-events: none;
+    pointer-events: none !important;
 
     &:after {
         content: '';
